Cambiando el contenido - header

--- a/public/index.html
+++ b/public/index.html
@@ -122,8 +122,8 @@
 <main class="hero" 
     style="background-image: url('/images/undraw_freelancer_b0my.svg');" >
     <div class="hero__caption" >
-        <h1 id="terrassa">Terrassa</h1>
-<h2 id="the-hugo-theme-for-you-or-for-your-company">The Hugo theme for you. Or for your company.</h2>
+        <h1 id="zajac-masaje-infantil">Zajac: Masaje Infantil</h1>
+<h2 id="la-mejor-decisin-para-ti-y-tu-beb">La mejor decisión para ti y tu bebé.</h2>
 
         
         <a href="/contact" class="ripple-btn cta__btn" alt="Contáctanos"
